--- a/src/main/resources/templates/documents/list-documents.html
+++ b/src/main/resources/templates/documents/list-documents.html
@@ -15,10 +15,15 @@
 
 </head>
 <body>
+
     <div class="container">
+
         <a th:href="@{/}">Back to Home page</a>
+
         <br><br>
+
         <h3>Documents List</h3>
+
         <hr>
 
         <div class="container-fluid p-3 my-3 bg-dark text-white">
@@ -31,40 +36,18 @@
                         <input type="text" class="form-control" th:name="name" th:value="${param.name}" placeholder="Name">
                     </div>
                     <div class="col-sm-2">
-                        <select class="form-control selectpicker" name="developer">
-                            <option value="">Developer (not selected)</option>
-                            <option th:each="drop : ${developers}"
-                                    th:value="${drop.name}"
-                                    th:text="${drop.name}"
-                                    th:selected="${drop.name == developer}">
-                            </option>
-                        </select>
-                    </div>
-                    <div class="col-sm-2">
-                        <select class="form-control selectpicker" name="originalHolder">
-                            <option value="">Original holder (not selected)</option>
-                            <option th:each="drop : ${originalHolders}"
-                                    th:value="${drop.name}"
-                                    th:text="${drop.name}"
-                                    th:selected="${drop.name == originalHolder}">
-                            </option>
-                        </select>
-                    </div>
-                    <div class="col-sm-2">
                         <input type="text" class="form-control" th:name="inventoryNumber" th:value="${param.inventoryNumber}" placeholder="Inventory number">
                     </div>
                     <div class="col-sm-2">
                         <select class="form-control selectpicker" name="status">
                             <option value="">Status (not selected)</option>
                             <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Status).values()}"
-                                    th:value="${drop}"
-                                    th:text="${drop.name}"
-                                    th:selected="${drop.name.toUpperCase() == status}">
+                                th:value="${drop}"
+                                th:text="${drop.name}"
+                                th:selected="${drop.name.toUpperCase() == status}">
                             </option>
                         </select>
                     </div>
-                </div>
-                <div class="row mb-2">
                     <div class="col-sm-2">
                         <select class="form-control selectpicker" name="stage">
                             <option value="">Stage (not selected)</option>
@@ -85,6 +68,28 @@
                             </option>
                         </select>
                     </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="developer">
+                            <option value="">Developer (not selected)</option>
+                            <option th:each="drop : ${developers}"
+                                    th:value="${drop.name}"
+                                    th:text="${drop.name}"
+                                    th:selected="${drop.name == developer}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="originalHolder">
+                            <option value="">Original holder (not selected)</option>
+                            <option th:each="drop : ${originalHolders}"
+                                    th:value="${drop.name}"
+                                    th:text="${drop.name}"
+                                    th:selected="${drop.name == originalHolder}">
+                            </option>
+                        </select>
+                    </div>
                     <div class="col-sm-1">
                         <div th:text="'R. Date (After):'" class="h6 thead-dark align-middle text-center"></div>
                     </div>
@@ -102,86 +107,6 @@
                 <a th:href="@{/documents/list}" class="btn btn-danger col-2">Clear filters</a>
             </form>
         </div>
-<!--        <form action="#" th:action="@{/documents/list}" method="get">-->
-<!--            <div class="row mb-1">-->
-<!--                <div class="col-sm-2">-->
-<!--                    <input type="text" class="form-control" th:name="decimalNumber" th:value="${param.decimalNumber}" placeholder="Decimal number">-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <input type="text" class="form-control" th:name="name" th:value="${param.name}" placeholder="Name">-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <select class="form-control selectpicker" name="developer">-->
-<!--                        <option value="">Developer (not selected)</option>-->
-<!--                        <option th:each="drop : ${developers}"-->
-<!--                                th:value="${drop.name}"-->
-<!--                                th:text="${drop.name}"-->
-<!--                                th:selected="${drop.name == developer}">-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <select class="form-control selectpicker" name="originalHolder">-->
-<!--                        <option value="">Original holder (not selected)</option>-->
-<!--                        <option th:each="drop : ${originalHolders}"-->
-<!--                                th:value="${drop.name}"-->
-<!--                                th:text="${drop.name}"-->
-<!--                                th:selected="${drop.name == originalHolder}">-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <input type="text" class="form-control" th:name="inventoryNumber" th:value="${param.inventoryNumber}" placeholder="Inventory number">-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <select class="form-control selectpicker" name="status">-->
-<!--                        <option value="">Status (not selected)</option>-->
-<!--                        <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Status).values()}"-->
-<!--                                th:value="${drop}"-->
-<!--                                th:text="${drop.name}"-->
-<!--                                th:selected="${drop.name.toUpperCase() == status}">-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="row mb-1">-->
-<!--                <div class="col-sm-2">-->
-<!--                    <select class="form-control selectpicker" name="stage">-->
-<!--                        <option value="">Stage (not selected)</option>-->
-<!--                        <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Stage).values()}"-->
-<!--                                th:value="${drop}"-->
-<!--                                th:text="${drop}"-->
-<!--                                th:selected="${drop.name() == stage}">-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <select class="form-control selectpicker" name="form">-->
-<!--                        <option value="">Form (not selected)</option>-->
-<!--                        <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Form).values()}"-->
-<!--                                th:value="${drop}"-->
-<!--                                th:text="${drop.name}"-->
-<!--                                th:selected="${drop.name.toUpperCase() == form}">-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <div th:text="'After:'" class="h6 thead-dark"></div>-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <input type="date" class="form-control" th:name="after" th:value="${param.after}">-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <div th:text="'Before:'" class="h6 thead-dark"></div>-->
-<!--                </div>-->
-<!--                <div class="col-sm-2">-->
-<!--                    <input type="date" class="form-control" th:name="before" th:value="${param.before}">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <button type="submit" class="btn btn-info col-2">Search</button>-->
-<!--            <a th:href="@{/documents/list}" class="btn btn-danger col-2">Clear filters</a>-->
-<!--        </form>-->
-
 
         <br><br>
 
@@ -190,12 +115,11 @@
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
                 <tr>
-                    <th><a class="sorted" sd:pagination-sort="decimalNumber">Decimal number</a></th>
-                    <th class="align-middle">Name</th>
-                    <th class="align-middle">Inventory number</th>
-                    <th class="align-middle">Stage</th>
-                    <th class="align-middle">Developer</th>
-                    <th class="align-middle">Original holder</th>
+                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="decimalNumber">Decimal number</a></th>
+                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="name">Name</a></th>
+                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="developer">Developer</a></th>
+                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="status">Status</a></th>
+                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="originalHolder">Original Holder</a></th>
                     <th class="align-middle">Show Document</th>
                 </tr>
             </thead>
@@ -206,9 +130,8 @@
                         <a th:href="@{'/documents/showDocumentInfo/' + ${tempDocument.id}}"><span class="text-dark" th:text="${tempDocument.decimalNumber}"/></a>
                     </td>
                     <td class="align-middle" th:text="${tempDocument.name}"></td>
-                    <td class="align-middle text-center" th:text="${tempDocument.inventoryNumber}"></td>
-                    <td class="align-middle text-center" th:text="${tempDocument.stage}"></td>
                     <td class="align-middle text-center" th:text="${tempDocument.developer == null} ? '' : ${tempDocument.developer.name}"></td>
+                    <td class="align-middle text-center" th:text="${tempDocument.status.name}"></td>
                     <td class="align-middle text-center" th:text="${tempDocument.originalHolder == null} ? '' : ${tempDocument.originalHolder.name}"></td>
                     <td class="align-middle text-center">
                         <a href="file:///C:/ARCHIV_22_N/PODL/VUIA/301411/068/SP/" class="btn btn-sm btn-success"><i class="fa fa-binoculars"></i></a>
