--- a/src/main/resources/templates/documents/document-applicabilities-list.html
+++ b/src/main/resources/templates/documents/document-applicabilities-list.html
@@ -16,80 +16,58 @@
 <body>
 <div class="container">
     <a th:href="@{'/documents/showDocumentInfo/' + ${id}}">Back to Document info</a>
+
     <br><br>
 
     <h3>Document Directory</h3>
+
     <hr>
 
-    <p class="h4 mb-4">Document applicabilities:</p>
-
-    <form th:action="@{'/documents/addApplicability/' + ${id}}" method="get">
-<!--        <input type="hidden" th:field="*{id}">-->
-<!--        <input type="hidden" th:field="*{name}">-->
-<!--        <input type="hidden" th:field="*{decimalNumber}">-->
-<!--        <input type="hidden" th:field="*{inventoryNumber}">-->
-<!--        <input type="hidden" th:field="*{receiptDate}">-->
-<!--        <input type="hidden" th:field="*{status}">-->
-<!--        <input type="hidden" th:field="*{applicabilities}">-->
-<!--        <input type="hidden" th:field="*{form}">-->
-<!--        <input type="hidden" th:field="*{changeNumber}">-->
-<!--        <input type="hidden" th:field="*{changeNumber}">-->
-<!--        <input type="hidden" th:field="*{stage}">-->
-<!--        <input type="hidden" th:field="*{sheetsAmount}">-->
-<!--        <input type="hidden" th:field="*{format}">-->
-<!--        <input type="hidden" th:field="*{a4Amount}">-->
-<!--        <input type="hidden" th:field="*{developer}">-->
-<!--        <input type="hidden" th:field="*{originalHolder}">-->
-<!--        <input type="hidden" th:field="*{changeNotices}">-->
-
-        <div class="row mb-3">
+    <form th:action="@{'/documents/addApplicability/' + ${id}}" method="post">
+        <div class="row mb-1">
             <div class="col-sm-4">
-                <input type="text" class="form-control" th:name="newApplicability" th:value="${param.newApplicability}" placeholder="Applicability decimal number"/>
+                <input type="text" th:class="${errorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newApplicability" th:value="${errorMessage != null} ? ${param.newApplicability} : ''" placeholder="Applicability decimal number"/>
             </div>
-
-                <button type="submit" class="btn btn-primary col-2">Add applicability</button>
-
+            <button type="submit" class="btn btn-primary col-2">Add applicability</button>
         </div>
-
+        <span class="help-block" th:if="${errorMessage != null}">
+            <ul>
+                <li class="text-danger" th:text="${errorMessage}"/>
+            </ul>
+        </span>
     </form>
 
+    <br>
 
-
-
-
-
-
-
-
+    <p class="h4 mb-3" th:text="${documentTo.decimalNumber} + ' applicabilities'"></p>
 
     <div th:if="${documentTo.applicabilities == null ||documentTo.applicabilities.size() == 0}">
-        <h2>No applicabilities</h2>
+        <p class="h6">No applicabilities</p>
     </div>
 
     <div th:if="${documentTo.applicabilities != null && documentTo.applicabilities.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
-            <tr>
-                <th class="align-middle">Decimal number</th>
-                <th class="align-middle">Name</th>
-                <th class="align-middle">Action</th>
-            </tr>
+                <tr>
+                    <th class="align-middle">Decimal number</th>
+                    <th class="align-middle">Name</th>
+                    <th class="align-middle">Action</th>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="tempApplicability : ${documentTo.applicabilities}">
-                <td class="align-middle">
-                    <a th:href="@{'/documents/showDocumentInfo/' + ${tempApplicability.id}}"><span class="text-dark" th:text="${tempApplicability.decimalNumber}"/></a>
-                </td>
-                <td class="align-middle" th:text="${tempApplicability.name}"></td>
-                <td class="align-middle">
-                    <a class="btn btn-sm btn-outline-danger"
-                       th:href="@{'/documents/removeApplicability/' + ${id} + '/' + ${tempApplicability.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
-                </td>
-            </tr>
+                <tr th:each="tempApplicability : ${documentTo.applicabilities}">
+                    <td class="align-middle">
+                        <a th:href="@{'/documents/showDocumentInfo/' + ${tempApplicability.id}}"><span class="text-dark" th:text="${tempApplicability.decimalNumber}"/></a>
+                    </td>
+                    <td class="align-middle" th:text="${tempApplicability.name}"></td>
+                    <td class="align-middle">
+                        <a class="btn btn-sm btn-outline-danger"
+                           th:href="@{'/documents/removeApplicability/' + ${id} + '/' + ${tempApplicability.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
-
 </div>
 </body>
 </html>
