--- a/src/main/resources/templates/documents/document-internals-list.html
+++ b/src/main/resources/templates/documents/document-internals-list.html
@@ -16,50 +16,55 @@
 <body>
 <div class="container">
     <a th:href="@{'/documents/showDocumentInfo/' + ${id}}">Back to Document info</a>
+
     <br><br>
 
     <h3>Document Directory</h3>
+
     <hr>
 
-    <p class="h4 mb-4">Document internal dispatches:</p>
+    <p class="h4 mb-4" th:text="${documentTo.decimalNumber} + ' internal dispatches'"></p>
 
 
-    <div th:if="${internalDispatches == null || internalDispatches.size() == 0}">
+    <div th:if="${documentTo.internalDispatches == null || documentTo.internalDispatches.size() == 0}">
         <h2>No internal dispatches</h2>
     </div>
 
-    <div th:if="${internalDispatches != null && internalDispatches.size() != 0}">
+    <div th:if="${documentTo.internalDispatches != null && documentTo.internalDispatches.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
-            <tr>
-                <th class="align-middle">Waybill</th>
-                <th class="align-middle">Dispatch date</th>
-                <th class="align-middle">Status</th>
-                <th class="align-middle">Stamp</th>
-                <th class="align-middle">Dispatch type</th>
-                <th class="align-middle">Dispatch handler</th>
-                <th class="align-middle">Action</th>
-            </tr>
+                <tr>
+                    <th class="align-middle">Waybill</th>
+                    <th class="align-middle">Dispatch date</th>
+                    <th class="align-middle">Status</th>
+                    <th class="align-middle">Dispatch type</th>
+                    <th class="align-middle">Stamp</th>
+                    <th class="align-middle">Dispatch handler</th>
+                    <th class="align-middle">Action</th>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="tempInternal : ${internalDispatches}">
-                <td class="align-middle">
-                    <a th:href="@{'/internaldispatches/showInternalDispatchInfo/' + ${tempInternal.id}}"><span class="text-dark" th:text="${tempInternal.waybill}"/></a>
-                </td>
-                <td class="align-middle" th:text="${tempInternal.dispatchDate}"></td>
-                <td class="align-middle" th:text="${tempInternal.status}"></td>
-                <td class="align-middle" th:text="${tempInternal.stamp}"></td>
-                <td class="align-middle" th:text="${tempInternal.isAlbum} ? 'Album (' + ${tempInternal.albumName} + ')' : 'Rossip'"></td>
-                <td class="align-middle" th:text="${tempInternal.dispatchHandler.name}"></td>
-                <td class="align-middle">
-                    <a class="btn btn-sm btn-outline-danger"
-                       th:href="@{'/documents/removeInternal/' + ${id} + '/' + ${tempInternal.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
-                </td>
-            </tr>
+                <tr th:each="tempInternal : ${documentTo.internalDispatches}">
+                    <td class="align-middle text-center">
+                        <a th:href="@{'/internaldispatches/showInternalDispatchInfo/' + ${tempInternal.id}}" th:text="${tempInternal.waybill}"></a>
+                    </td>
+                    <td class="align-middle text-center" th:text="${tempInternal.dispatchDate}"></td>
+                    <td class="align-middle text-center" th:text="${tempInternal.status}"></td>
+                    <td class="align-middle text-center" th:text="${tempInternal.isAlbum} ? 'Album (' + ${tempInternal.albumName} + ')' : 'Rossip'"></td>
+                    <td class="align-middle text-center" th:text="${tempInternal.stamp}"></td>
+                    <td class="align-middle text-center" th:text="${tempInternal.dispatchHandler.name}"></td>
+                    <td class="align-middle text-center">
+                        <a class="btn btn-sm btn-outline-danger"
+                           th:href="@{'/documents/removeInternal/' + ${id} + '/' + ${tempInternal.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
-</div>
 
+    <div class="text-danger" th:if="${errorMessage != null}">
+        <h6 th:text="${errorMessage}"></h6>
+    </div>
+</div>
 </body>
 </html>
