--- a/src/main/resources/templates/documents/documentTo-changes-list.html
+++ b/src/main/resources/templates/documents/documentTo-changes-list.html
@@ -16,56 +16,15 @@
 <body>
 <div class="container">
     <a th:href="@{'/documents/showDocumentInfo/' + ${documentTo.id}}">Back to Document info</a>
+
     <br><br>
 
     <h3>Document Directory</h3>
+
     <hr>
 
-    <p class="h4 mb-4">Document change notices:</p>
+    <p class="h4 mb-4" th:text="${documentTo.decimalNumber} + ' change notices'"></p>
 
-<!--    <form th:action="@{'/documents/addChange/' + ${documentTo.id}}" method="post">-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{id}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{name}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{decimalNumber}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{inventoryNumber}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{receiptDate}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{status}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{applicabilities}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{form}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{changeNumber}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{changeNumber}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{stage}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{sheetsAmount}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{format}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{a4Amount}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{developer}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{originalHolder}">&ndash;&gt;-->
-<!--&lt;!&ndash;        <input type="hidden" th:field="*{changeNotices}">&ndash;&gt;-->
-
-<!--        <div class="row mb-3">-->
-<!--                <div class="col-sm-4">-->
-<!--                    <input type="text" th:name="newChangeNoticeName" th:value="${param.newChangeNoticeName}" placeholder="Change notice name" th:class="${#fields.hasErrors('tempChangeNoticeName')} ? 'form-control is-invalid' : 'form-control'"/>-->
-<!--                    <span class="help-block" th:if="${#fields.hasErrors('tempChangeNoticeName')}">-->
-<!--                        <ul>-->
-<!--                            <li class="text-danger" th:each="err : ${#fields.errors('tempChangeNoticeName')}" th:text="${err}"/>-->
-<!--                        </ul>-->
-<!--                    </span>-->
-<!--                </div>-->
-
-<!--                <div class="col-sm-4">-->
-<!--                    <input type="text" th:name="newChangeNoticeNumber" th:value="${param.newChangeNoticeNumber}" placeholder="Change notice number" th:class="${#fields.hasErrors('tempChangeNoticeNumber')} ? 'form-control is-invalid' : 'form-control'"/>-->
-<!--                    <span class="help-block" th:if="${#fields.hasErrors('tempChangeNoticeNumber')}">-->
-<!--                        <ul>-->
-<!--                            <li class="text-danger" th:each="err : ${#fields.errors('tempChangeNoticeNumber')}" th:text="${err}"/>-->
-<!--                        </ul>-->
-<!--                    </span>-->
-<!--                </div>-->
-
-<!--                <button type="submit" class="btn btn-primary col-2">Add change</button>-->
-
-<!--        </div>-->
-
-<!--    </form>-->
 
     <div th:if="${documentTo.changeNotices == null || documentTo.changeNotices.size() == 0}">
         <h2>No changes</h2>
@@ -87,7 +46,7 @@
                 <tr th:each="entry : ${documentTo.changeNotices.entrySet()}">
                     <td class="align-middle text-center" th:text="${entry.key}"></td>
                     <td class="align-middle text-center">
-                        <a th:href="@{'/changenotices/showChangeNoticeInfo/' + ${entry.value.id}}"><span class="text-dark " th:text="${entry.value.name}"/></a>
+                        <a th:href="@{'/changenotices/showChangeNoticeInfo/' + ${entry.value.id}}" th:text="${entry.value.name}"></a>
                     </td>
                     <td class="align-middle text-center" th:text="${entry.value.issueDate}"></td>
                     <td class="align-middle text-center" th:text="${entry.value.developer} == null ? '' : ${entry.value.developer.name}"></td>
@@ -102,9 +61,8 @@
     </div>
 
     <div class="text-danger" th:if="${errorMessage != null}">
-        <h5 th:text="${errorMessage}"></h5>
+        <h6 th:text="${errorMessage}"></h6>
     </div>
-
 </div>
 </body>
 </html>
