--- a/src/main/resources/templates/documents/documentTo-form.html
+++ b/src/main/resources/templates/documents/documentTo-form.html
@@ -38,6 +38,8 @@
             <input type="hidden" th:field="*{id}">
             <input type="hidden" th:field="*{changeNotices}">
             <input type="hidden" th:field="*{applicabilities}">
+            <input type="hidden" th:field="*{externalDispatches}">
+            <input type="hidden" th:field="*{internalDispatches}">
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
