--- a/src/main/resources/templates/documents/documentToInfo.html
+++ b/src/main/resources/templates/documents/documentToInfo.html
@@ -174,13 +174,9 @@
                     <h6>External dispatches:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <form th:action="@{'/documents/showExternalDispatches/' + ${documentTo.id}}" th:object="${documentTo}">
-                        <button type="submit" class="thead-dark">Show externals</button>
-                    </form>
-
-<!--                    <a th:href="@{'/documents/showExternalDispatches/' + ${documentTo.decimalNumber}}">-->
-<!--                        Show externals-->
-<!--                    </a>-->
+                    <a th:href="@{'/documents/showExternalDispatches/' + ${documentTo.id}}">
+                        Show externals
+                    </a>
                 </div>
             </div>
 
