--- a/src/main/resources/templates/documents/applicabilities-list.html
+++ b/src/main/resources/templates/documents/applicabilities-list.html
@@ -39,13 +39,13 @@
 
     <br>
 
-    <p class="h4 mb-3" th:text="${documentTo.decimalNumber} + ' applicabilities'"></p>
+    <p class="h4 mb-3" th:text="${document.decimalNumber} + ' applicabilities'"></p>
 
-    <div th:if="${documentTo.applicabilities == null ||documentTo.applicabilities.size() == 0}">
+    <div th:if="${document.applicabilities == null ||document.applicabilities.size() == 0}">
         <p class="h6">No applicabilities</p>
     </div>
 
-    <div th:if="${documentTo.applicabilities != null && documentTo.applicabilities.size() != 0}">
+    <div th:if="${document.applicabilities != null && document.applicabilities.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
                 <tr>
@@ -55,7 +55,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="tempApplicability : ${documentTo.applicabilities}">
+                <tr th:each="tempApplicability : ${document.applicabilities}">
                     <td class="align-middle">
                         <a th:href="@{'/documents/showDocumentInfo/' + ${tempApplicability.id}}"><span class="text-dark" th:text="${tempApplicability.decimalNumber}"/></a>
                     </td>
