--- a/src/main/resources/templates/documents/info.html
+++ b/src/main/resources/templates/documents/info.html
@@ -27,7 +27,7 @@
 
         <p class="h4 mb-4">Document information</p>
 
-        <div th:object="${documentTo}">
+        <div th:object="${document}">
 
             <div class="row">
                 <div class="col-sm-2 border">
@@ -97,7 +97,7 @@
                     <h6>Developer:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:text="${documentTo.developer == null} ? '' : ${documentTo.developer.name}"></h6>
+                    <h6 th:text="${document.developer == null} ? '' : ${document.developer.name}"></h6>
                 </div>
             </div>
 
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="row" th:if="${documentTo.form.name() == 'PAPER'}">
+            <div class="row" th:if="${document.form.name() == 'PAPER'}">
                 <div class="col-sm-2 border">
                     <h6>Format:</h6>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="row" th:if="${documentTo.form.name() == 'PAPER'}">
+            <div class="row" th:if="${document.form.name() == 'PAPER'}">
                 <div class="col-sm-2 border">
                     <h6>Sheets amount:</h6>
                 </div>
@@ -138,7 +138,7 @@
             </div>
 
 
-            <div class="row" th:if="${documentTo.form.name() == 'PAPER'}">
+            <div class="row" th:if="${document.form.name() == 'PAPER'}">
                 <div class="col-sm-2 border">
                     <h6>A4 amount:</h6>
                 </div>
@@ -152,7 +152,7 @@
                     <h6>Changes:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <a th:href="@{'/documents/showChanges/' + ${documentTo.id}}">
+                    <a th:href="@{'/documents/showChanges/' + ${document.id}}">
                         Show changes
                     </a>
                 </div>
@@ -163,7 +163,7 @@
                     <h6>Applicabilities:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <a th:href="@{'/documents/showApplicabilities/' + ${documentTo.id}}">
+                    <a th:href="@{'/documents/showApplicabilities/' + ${document.id}}">
                         Show applicabilities
                     </a>
                 </div>
@@ -174,7 +174,7 @@
                     <h6>External dispatches:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <a th:href="@{'/documents/showExternalDispatches/' + ${documentTo.id}}">
+                    <a th:href="@{'/documents/showExternalDispatches/' + ${document.id}}">
                         Show externals
                     </a>
                 </div>
@@ -185,7 +185,7 @@
                     <h6>Internal dispatches:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <a th:href="@{'/documents/showInternalDispatches/' + ${documentTo.id}}">
+                    <a th:href="@{'/documents/showInternalDispatches/' + ${document.id}}">
                         Show internals
                     </a>
                 </div>
@@ -193,8 +193,8 @@
 
             <div class="row mb-1">
                 <div class="col-sm-4 offset-1 text-right">
-                    <a th:href="@{'/documents/showFormForUpdate/' + ${documentTo.id}}" class="btn btn-sm btn-outline-info">Update</a>
-                    <a th:href="@{'/documents/delete/' + ${documentTo.id}}" class="btn btn-sm btn-outline-danger"
+                    <a th:href="@{'/documents/showFormForUpdate/' + ${document.id}}" class="btn btn-sm btn-outline-info">Update</a>
+                    <a th:href="@{'/documents/delete/' + ${document.id}}" class="btn btn-sm btn-outline-danger"
                        onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
                 </div>
             </div>
