--- a/src/main/resources/templates/documents/internals-list.html
+++ b/src/main/resources/templates/documents/internals-list.html
@@ -23,14 +23,14 @@
 
     <hr>
 
-    <p class="h4 mb-3" th:text="${documentTo.decimalNumber} + ' internal dispatches'"></p>
+    <p class="h4 mb-3" th:text="${document.decimalNumber} + ' internal dispatches'"></p>
 
 
-    <div th:if="${documentTo.internalDispatches == null || documentTo.internalDispatches.size() == 0}">
+    <div th:if="${document.internalDispatches == null || document.internalDispatches.size() == 0}">
         <h6>No internal dispatches</h6>
     </div>
 
-    <div th:if="${documentTo.internalDispatches != null && documentTo.internalDispatches.size() != 0}">
+    <div th:if="${document.internalDispatches != null && document.internalDispatches.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
                 <tr>
@@ -44,7 +44,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="tempInternal : ${documentTo.internalDispatches}">
+                <tr th:each="tempInternal : ${document.internalDispatches}">
                     <td class="align-middle text-center">
                         <a th:href="@{'/internaldispatches/showInternalDispatchInfo/' + ${tempInternal.id}}" th:text="${tempInternal.waybill}"></a>
                     </td>
