--- a/src/main/resources/templates/documents/documents-list.html
+++ b/src/main/resources/templates/documents/documents-list.html
@@ -36,7 +36,7 @@
                         <input type="text" class="form-control" th:name="name" th:value="${param.name}" placeholder="Name">
                     </div>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control" th:name="inventoryNumber" th:value="${param.inventoryNumber}" placeholder="Inventory number">
+                        <input type="number" class="form-control" th:name="inventoryNumber" th:value="${param.inventoryNumber}" placeholder="Inventory number">
                     </div>
                     <div class="col-sm-2">
                         <select class="form-control selectpicker" name="status">
